@@ -1,3 +1,4 @@
+Matching Game: Added "My Matches" text under the score cells
 Matching Game: Added "play again" button above "next level" button.
 Matching Game: Made the score cells bigger
 Matching Game: Changed "Keep" button to "Keep Match" with a line break
